# LLM-RAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py  routes_ask.py  routes_documents.py  routes_health.py  routes_operations.py
app/core/: config.py  timing.py
app/data/: corpus_manifest.yml  demo_operations.json
app/embeddings/: base.py  factory.py  hash_provider.py  sentence_transformers_provider.py
app/llm/: base.py  factory.py  mock.py  openai_compatible.py
app/schemas/: ask.py  documents.py  health.py  operations.py
app/services/: chunking.py  diagnosis_service.py  document_loader.py  ingestion_service.py  operations_service.py  rag_service.py
app/vectorstore/: base.py  chroma_store.py
data/raw/: drip_irrigation_troubleshooting.md  heat_stress_irrigation_response.md  ipm_scouting_principles.md  irrigation_scheduling_basics.md  soil_moisture_sensor_protocol.md  tomato_yellowing_field_check.md
scripts/: build_index.py  ingest_document.py  seed_demo_data.py
tests/: test_api.py  test_chunking.py  test_embeddings.py  test_operations_service.py
